--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "material-design-icons": "^3.0.1",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9",
+    "vue2-perfect-scrollbar": "^1.5.0",
+    "vuescroll": "^4.17.2",
     "vuetify": "^2.3.19",
     "vuex": "^3.6.0"
   },
