--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,30 +8,38 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.21.0",
-    "core-js": "^3.6.5",
+    "axios": "^0.21.1",
+    "core-js": "^3.9.1",
     "es6-promise": "^4.2.8",
     "material-design-icons": "^3.0.1",
+    "moment": "^2.29.1",
     "vue": "^2.6.11",
-    "vue-router": "^3.4.9",
+    "vue-i18n": "^8.24.1",
+    "vue-router": "^3.5.1",
     "vue2-perfect-scrollbar": "^1.5.0",
-    "vuescroll": "^4.17.2",
-    "vuetify": "^2.3.19",
-    "vuex": "^3.6.0"
+    "vuescroll": "^4.17.3",
+    "vuetify": "^2.4.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@mdi/font": "^5.8.55",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@mdi/font": "^5.9.55",
+    "@nuxtjs/vuetify": "^1.11.3",
+    "@vue/cli-plugin-babel": "^4.5.12",
+    "@vue/cli-plugin-eslint": "^4.5.12",
+    "@vue/cli-service": "^4.5.12",
     "babel-eslint": "^10.1.0",
+    "css-loader": "^5.1.3",
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^6.1.0",
-    "sass": "^1.29.0",
-    "sass-loader": "^10.1.0",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "^1.32.8",
+    "sass-loader": "^10.1.1",
+    "style-loader": "^2.0.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^5.0.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^4.46.0"
   },
   "eslintConfig": {
     "root": true,
