--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
     "vue": "^2.6.11",
+    "vue-class-component": "^7.2.6",
     "vue-html-to-paper": "^1.3.1",
     "vue-i18n": "^8.24.2",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuescroll": "^4.17.3",
