--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,12 @@
     "es6-promise": "^4.2.8",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
-    "vue": "^2.6.11",
+    "vue": "^2.6.12",
+    "vue-class-component": "^7.2.6",
     "vue-html-to-paper": "^1.3.1",
     "vue-i18n": "^8.24.2",
+    "vue-meta": "^2.4.0",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuescroll": "^4.17.3",
