--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "moment": "^2.29.1",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
+    "vue-disable-autocomplete": "0.0.4",
     "vue-html-to-paper": "^1.3.1",
     "vue-i18n": "^8.24.2",
     "vue-meta": "^2.4.0",
