--- a/frontend/nginx.config
+++ b/frontend/nginx.config
@@ -1,18 +1,14 @@
-server {
-    listen 80;
-    listen [::]:80;
-    server_name localhost;
-
-    charset utf-8;
-
+ server {
+    listen       80;
+    server_name  localhost;
     location / {
-        root /usr/share/nginx/html;
-        index index.html index.html;
-        try_files $uri $uri/ /index.html;
+      root   /app;
+      index  index.html;
+      try_files $uri $uri/ /index.html;
+      include  /etc/nginx/mime.types;
     }
-
-    error_page 500 502 503 504 /50x.thml;
-    location = \50x.html{
-        root /usr/share/nginx/html;
+    error_page   500 502 503 504  /50x.html;
+    location = /50x.html {
+      root   /usr/share/nginx/html;
     }
-}
+  }
