--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,11 @@
     "axios": "^0.21.1",
     "core-js": "^3.9.1",
     "es6-promise": "^4.2.8",
+    "jspdf": "^2.3.1",
+    "jspdf-autotable": "^3.5.14",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
+    "objects-to-csv": "^1.3.6",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-disable-autocomplete": "0.0.4",
