--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,40 +9,43 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
-    "core-js": "^3.9.1",
+    "core-js": "^3.12.1",
     "es6-promise": "^4.2.8",
+    "html2canvas": "^1.0.0-rc.1",
+    "html2pdf.js": "^0.9.3",
     "jspdf": "^2.3.1",
     "jspdf-autotable": "^3.5.14",
     "material-design-icons": "^3.0.1",
     "moment": "^2.29.1",
     "objects-to-csv": "^1.3.6",
+    "pdfmake": "^0.1.71",
     "vue": "^2.6.12",
     "vue-class-component": "^7.2.6",
     "vue-disable-autocomplete": "0.0.4",
-    "vue-html-to-paper": "^1.3.1",
-    "vue-i18n": "^8.24.2",
+    "vue-html-to-paper": "^1.4.1",
+    "vue-i18n": "^8.24.4",
     "vue-meta": "^2.4.0",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.5.1",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuescroll": "^4.17.3",
-    "vuetify": "^2.4.7",
+    "vuetify": "^2.4.11",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@mdi/font": "^5.9.55",
     "@nuxtjs/vuetify": "^1.11.3",
-    "@vue/cli-plugin-babel": "^4.5.12",
-    "@vue/cli-plugin-eslint": "^4.5.12",
-    "@vue/cli-service": "^4.5.12",
+    "@vue/cli-plugin-babel": "^4.5.13",
+    "@vue/cli-plugin-eslint": "^4.5.13",
+    "@vue/cli-service": "^4.5.13",
     "babel-eslint": "^10.1.0",
-    "css-loader": "^5.1.3",
+    "css-loader": "^5.2.4",
     "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
     "material-design-icons-iconfont": "^6.1.0",
-    "sass": "^1.32.8",
-    "sass-loader": "^10.1.1",
+    "sass": "^1.32.12",
+    "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
     "stylus": "^0.54.8",
     "stylus-loader": "^5.0.0",
