--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,8 @@ services:
     image: postgres
     environment:
       - POSTGRES_DB=mydb
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=andi
+      - POSTGRES_USER=<postgres User>
+      - POSTGRES_PASSWORD=<postgres PW>
   backend:
     build: backend/MyProject/.
     command: bash -c "python manage.py makemigrations && python manage.py migrate && python manage.py runserver  0.0.0.0:8000 "
